[package]
name = "mininotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.25.0"
ropey = "1.5.0"
unicode-segmentation = "1.10.0"
unicode-width = "0.1.10"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
arboard = { version = "3.2.0" }
