[package]
name = "mininotes"
version = "0.1.0"
edition = "2021"
authors = ["Dimas Leenman"]
description = "A small terminal text editor"
repository = "https://github.com/Dimev/mininotes"
licence = "WTFPL"
keywords = ["text", "cli", "editor", "unicode", "terminal", "note"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.25.0"
ropey = "1.5.0"
unicode-segmentation = "1.10.0"
unicode-width = "0.1.10"

# bleh (These operating systems are supported by arboard)
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
arboard = { version = "3.2.0" }
